--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -54,7 +54,7 @@
   opacity: 1;
 }
 
-label span {
+.label span {
   display: block;
   width: 10px;
   height: 10px;
@@ -63,7 +63,7 @@ label span {
   margin: 5px;
 }
 
-label input:checked ~ span {
+.label input:checked ~ span {
   background-color: rgba(0, 125, 184, 0.5);
   transform: scale(1.1);
 }
