--- a/components/ProductsContainer/ProductsContainer.module.css
+++ b/components/ProductsContainer/ProductsContainer.module.css
@@ -1,4 +1,4 @@
-.products-container {
+.productsContainer {
   align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 900px) {
-  .products-container {
+  .productsContainer {
     box-sizing: border-box;
     width: 100vw;
   }
