--- a/components/Slider/Slider.module.css
+++ b/components/Slider/Slider.module.css
@@ -1,4 +1,4 @@
-.principal-page .slider {
+.sliderPrincipalPage {
   box-sizing: border-box;
   display: flex;
   flex-wrap: nowrap;
@@ -6,58 +6,20 @@
   width: 90vw;
 }
 
-.slider:hover::-webkit-scrollbar-thumb {
+.sliderPrincipalPage:hover::-webkit-scrollbar-thumb {
   background-color: rgb(200, 200, 200);
 }
 
-.slider::-webkit-scrollbar {
+.sliderPrincipalPage::-webkit-scrollbar {
   background-color: rgba(200, 200, 200, 0);
   height: 8px;
   transition: 300ms;
   width: 30px;
 }
 
-.slider::-webkit-scrollbar-thumb {
+.sliderPrincipalPage::-webkit-scrollbar-thumb {
   background-color: rgba(200, 200, 200, 0);
   border-radius: 20px;
-}
-
-.principal-page .product {
-  border: 1px solid rgb(230, 230, 230);
-  border-radius: 5px;
-  height: 255px;
-  margin: 10px;
-  width: 230px;
-}
-
-.principal-page .product.darkmode {
-  background-color: rgb(50, 50, 50);
-  border: none;
-}
-
-.principal-page .product-header {
-  height: 140px;
-  width: 230px;
-  overflow-y: hidden;
-}
-
-.principal-page .product-header img {
-  width: 100%;
-}
-
-.principal-page .product-title {
-  padding: 0 5px;
-  height: 65px;
-  overflow-y: hidden;
-}
-
-.principal-page .product h3 {
-  font-weight: 300;
-  padding: 5px;
-}
-
-.principal-page .product.darkmode h3 {
-  color: white;
 }
 
 .scrollLeftButton, .scrollRightButton {
