Correcao nos links

--- a/styles/ShoppingCart.module.css
+++ b/styles/ShoppingCart.module.css
@@ -1,11 +1,11 @@
-.shopping-cart-page .container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-.purchase-data {
+.purchaseData {
   align-items: center;
   display: flex;
   justify-content: space-between;
