--- a/components/ShoppingCartProduct/ShoppingCartProduct.module.css
+++ b/components/ShoppingCartProduct/ShoppingCartProduct.module.css
@@ -1,4 +1,4 @@
-.product-card.shopping-cart-page {
+.productCard {
   align-items: center;
   background-color: white;
   box-shadow: 2px 2px 5px 2px rgb(210, 210, 210);
@@ -12,7 +12,7 @@
   padding: 0;
 }
 
-.product-card.shopping-cart-page .title {
+.productTitle {
   font-size: 20px;
   font-weight: 200;
   height: 75px;
@@ -20,14 +20,14 @@
   box-sizing: border-box;
 }
 
-.product-card.shopping-cart-page .description {
+.productDescription {
   box-sizing: border-box;
   margin: 0;
   padding: 0 10px;
   width: 200px;
 }
 
-.product-card.shopping-cart-page .image {
+.productImage {
   align-items: center;
   display: flex;
   width: 100px;
@@ -36,11 +36,11 @@
   box-sizing: border-box;
 }
 
-.product-card .image img {
+.productImage img {
   width: 100%;
 }
 
-.product-card .price {
+.productPrice {
   font-weight: 300;
 }
 
