Correcao das funcoes relacioandasonadas ao storage

--- a/components/ShoppingCartProduct/ShoppingCartProduct.module.css
+++ b/components/ShoppingCartProduct/ShoppingCartProduct.module.css
@@ -31,8 +31,9 @@
   align-items: center;
   display: flex;
   width: 100px;
-  height: 200px;
+  height: 100px;
   overflow: hidden;
+  position: relative;
   box-sizing: border-box;
 }
 
