--- a/styles/Authentication.module.css
+++ b/styles/Authentication.module.css
@@ -1,4 +1,4 @@
-.authentication-page {
+.authenticationPage {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
@@ -6,22 +6,24 @@
   height: 100vh;
 }
 
-.authentication-page .left, .authentication-page .right {
+.left, .right {
   box-sizing: border-box;
   height: 100vh;
 }
 
-.authentication-page .left {
-  background: url('../../assets/images/background.png');
+.left {
+  background: url('../assets/images/background.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 60vw;
+  box-sizing: border-box;
+  width: 60%;
 }
 
-.authentication-page .right {
+.right {
   align-items: flex-start;
-  width: 40vw;
+  box-sizing: border-box;
+  width: 40%;
 }
 
 /* .authentication-page header {
@@ -40,58 +42,26 @@
   width: 100%;
 } */
 
-.authentication-page input {
+.authenticationPage input {
   padding: 5px;
   border: 1px solid rgb(210, 210, 210);
   border-radius: 4px;
 }
 
-.authentication-page button {
+.authenticationPage button {
   padding: 5px;
 }
 
-.authentication-page h2 {
+.authenticationPage h2 {
   font-size: 20px;
   font-weight: 300;
   padding: 10px;
 }
 
-.register, .register form, .login form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
 
-.register, .login {
-  padding: 90px 20px;
-}
-
-.register input, .login input {
-  margin: auto;
-  padding: 10px;
-  margin: 10px;
-  width: 80%;
-}
-
-.register button, .login button {
-  background-color: rgb(20, 62, 90);
-  border: none;
-  border-radius: 5px;
-  color: white;
-  padding: 10px;
-  margin: 10px;
-  width: 150px;
-}
-
-.error {
-  font-weight: 300;
-  font-size: 12px;
-  color: rgb(158, 3, 3);
-  padding: 0 10px;
-}
 
 @media  screen and (max-width: 600px) {
-  .authentication-page .left, .authentication-page .right {
+  .left, .right {
     width: 100vw;
   }
 }
