--- a/components/ProductCard/ProductCard.module.css
+++ b/components/ProductCard/ProductCard.module.css
@@ -25,7 +25,7 @@
   overflow: hidden;
 }
 
-.productCard .description {
+.description {
   box-sizing: border-box;
   margin: 0;
   padding: 0 10px;
@@ -36,13 +36,14 @@
   color: white;
 }
 
-.productCard .image {
+.image {
   align-items: center;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   display: flex;
   width: 100%;
   height: 150px;
+  position: relative;
   overflow: hidden;
 }
 
