--- a/components/Slider/Slider.module.css
+++ b/components/Slider/Slider.module.css
@@ -1,3 +1,10 @@
+.container {
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 100%;
+}
+
+
 .sliderPrincipalPage {
   box-sizing: border-box;
   display: flex;
