--- a/components/Categories/Categories.module.css
+++ b/components/Categories/Categories.module.css
@@ -6,6 +6,41 @@
   flex-wrap: wrap;
 }
 
+.categoriesHome {
+  background-color: rgb(245, 245, 245);
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding: 20px;
+  width: 100%;
+}
+
+.categoriesHome .category {
+  background-color: #318d90;
+  color: white;
+}
+
+.categoriesHome .category:hover {
+  background-color: #318d908e;
+}
+
+.categoriesHome:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(215, 215, 215, 1);
+  
+}
+
+.categoriesHome::-webkit-scrollbar {
+  background-color: rgba(200, 200, 200, 0);
+  height: 8px;
+  transition: 5s;
+  width: 30px;
+}
+
+.categoriesHome::-webkit-scrollbar-thumb {
+  background-color: rgba(200, 200, 200, 0);
+  border-radius: 20px;
+  transition: 2s;
+}
+
 .categories.darkmode {
   border-right: 1px solid rgb(50, 50, 50);
 }
@@ -22,6 +57,7 @@
   font-size: 15px;
   padding: 10px;
   text-align: start;
+  transition: 300ms;
 }
 
 .darkmode .category {
