--- a/components/ProductCard/ProductCard.module.css
+++ b/components/ProductCard/ProductCard.module.css
@@ -4,13 +4,18 @@
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   box-sizing: border-box;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   height: 320px;
   justify-content: space-between;
   margin: 15px;  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
+  transition: 300ms;
   width: 250px;
+}
+
+.productCard:hover {
+  transform: scale(1.1);
 }
 
 .productCard.darkmode {
