--- a/components/Slider/Slider.module.css
+++ b/components/Slider/Slider.module.css
@@ -4,17 +4,17 @@
   width: 100%;
 }
 
-
 .sliderPrincipalPage {
   box-sizing: border-box;
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
   width: 90vw;
 }
 
 .sliderPrincipalPage:hover::-webkit-scrollbar-thumb {
-  background-color: rgb(200, 200, 200);
+  background-color: rgb(220, 220, 220);
 }
 
 .sliderPrincipalPage::-webkit-scrollbar {
@@ -33,13 +33,14 @@
   align-items: center;
   border: none;
   border-radius: 50%;
-  background-color: rgba(200, 200, 200, 0.7);
+  background-color: rgba(230, 230, 230, 0.7);
   color: rgb(120, 120, 120);
   display: flex;
   font-size: 20px;
   height: 60px;
   justify-content: center;
   width: 60px;
+  z-index: 1;
 }
 
 .buttons {
@@ -50,10 +51,11 @@
   height: 255px;
   opacity: 0;
   position: absolute;
+  transition: 300ms;
   width: 90vw;
 }
 
-.slider:hover .buttons {
+.sliderPrincipalPage:hover .buttons {
   opacity: 1;
 }
 
