--- a/components/ProductCard/ProductCard.module.css
+++ b/components/ProductCard/ProductCard.module.css
@@ -1,6 +1,7 @@
 .productCard {
   align-items: center;
   background-color: white;
+  border: 1px solid rgb(215, 215, 215);
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   box-sizing: border-box;
@@ -46,8 +47,10 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   display: flex;
-  width: 100%;
+  width: 99%;
   height: 150px;
+  justify-content: center;
+  margin: auto;
   position: relative;
   overflow: hidden;
 }
