--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,25 +1,20 @@
-.home-page {
+.searchPage {
   padding: 0;
   margin: 0;
 }
 
-.home-page.darkmode {
-  background-color: rgb(40, 40, 40);
-  color: white;
-}
-
-.home-page .container {
+.container {
   display: flex;
   flex-flow: row-reverse wrap;
   justify-content: flex-end;
 }
 
-.home-page .left {
+.left {
   width: 20%;
   box-sizing: border-box;
 }
 
-.home-page .right {
+.right {
   box-sizing: border-box;
   padding: 0 20px;
   width: 80%;
@@ -31,7 +26,7 @@
 }
 
 @media screen and (max-width: 900px) {
-  .home-page .container {
+  .container {
     box-sizing: border-box;
     flex-flow: row wrap;
     justify-content: center;
@@ -40,7 +35,7 @@
     width: 100vw;
   }
 
-  .home-page .left, .home-page .right {
+  .left, .right {
     box-sizing: border-box;
     width: 100vw;
     padding: 0;
