Correcao da paginação

--- a/components/Categories/Categories.module.css
+++ b/components/Categories/Categories.module.css
@@ -71,8 +71,9 @@
   /* border-left: 8px solid rgb(219, 190, 129); */
 }
 
-.categories .selected {
-  background-color: rgb(200, 200, 200);
+.selected {
+  background-color: #318d90;
+  color: white
   /* border-left: 8px solid rgb(219, 190, 129); */
 }
 
