--- a/components/ShoppingCartProduct/ShoppingCartProduct.module.css
+++ b/components/ShoppingCartProduct/ShoppingCartProduct.module.css
@@ -87,7 +87,7 @@
 }
 
 @media screen and (max-width: 900px) {
-  .product-card.shopping-cart-page {
+  .productCard {
     align-items: center;
     background-color: white;
     box-shadow: 2px 2px 5px 2px rgb(210, 210, 210);
