--- a/styles/Checkout.module.css
+++ b/styles/Checkout.module.css
@@ -71,10 +71,18 @@
     overflow-x: auto;
   }
 
-  .checkoutForm input {
-    width: 90%;
+  .checkoutForm {
+    padding: 0;
+    width: 100%;
+  }
+
+  .checkoutForm label, .checkoutForm input {
+    width: 100%;
     padding: 10px;
-    margin: 10px 0 25px 0;
+    margin: 10px 0 0px 0;
+  }
+
+  .checkoutForm input {
     border: 1px solid rgb(200, 200, 200);
   }
   
