--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -31,7 +31,7 @@
     flex-flow: row wrap;
     justify-content: center;
     flex-direction: column-reverse;
-    padding: 20px 0!important;
+    padding: 0!important;
     width: 100vw;
   }
 
